# tus-remesas-ya

./: .bumpver.toml  .bumver.toml  .env.example  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: docker-build.yml
app/: main.py
app/api/: __init__.py  app_factory.py  dependencies.py  errors_parser.py  include_routers.py  setup_client.py
app/api/routes/: bcv_routes.py  binance_routes.py  dolar_routes.py  fiat_routes.py  health_routes.py  history_routes.py  ui_routes.py
app/controllers/: __init__.py  base_controller.py  bcv_controller.py  binance_controller.py
app/database/: __init__.py  database_manager.py
app/database/models/: __init__.py  bcv_sql_model.py  binance_sql_model.py
app/enums/: __init__.py  binance_asset_enum.py  currecies_enum.py  fiat_enum.py  trade_type_enum.py  user_type_enum.py  webhook_priority_enum.py
app/errors/: __init__.py  app_errors.py  base_error.py
app/managers/: __init__.py  remesas_manager.py
app/schemas/: __init__.py  arbitrage_response_schemas.py  bcv_response_schemas.py  binance_request_schema.py  binance_response_schemas.py  dolar_response.py  fiats_pair_response.py  webhook_payload_schemas.py
app/services/: __init__.py  arbitrage_servide.py  average_dolar_service.py  bcv_service.py  binance_service.py  fiat_exchange_service.py  ui_service.py  webhook_service.py
app/settings/: __init__.py  app_logger.py  app_settings.py
app/ui/: deno.json  index.html  package.json  tsconfig.app.json
app/ui/src/: App.vue  env.d.ts  main.js  main.ts  (+1 more)
(+38 files in other folders)
