[project]
name = "tus-remesas-ya"
version = "0.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "apscheduler>=3.11.3",
    "beautifulsoup4>=4.15.0",
    "fastapi>=0.139.2",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pytz>=2026.2",
    "requests>=2.34.2",
    "sqlmodel>=0.0.39",
    "uvicorn>=0.51.0",
]

[dependency-groups]
dev = [
    "bumpver>=2026.1132",
]
